--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,15 @@
     <string name="setting">설정</string>
     <string name="logout">로그아웃</string>
     <string name="friends">친구</string>
+    <string name="login">로그인</string>
+    <string name="forgotPassword">비밀번호를 잊으셨나요?</string>
+    <string name="email">이메일</string>
+    <string name="password">패스워드</string>
+    <string name="haveNoAccount">계정이 없으신가요?</string>
+    <string name="createAccount">가입하기</string>
+    <string name="backButton">뒤로가기</string>
+    <string name="register">계정 생성</string>
+    <string name="userName">이름</string>
+    <string name="alreadyHaveAccount">이미 계정이 있으신가요?</string>
+    <string name="findPassword">비밀번호 찾기</string>
 </resources>
