--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="profile">프로필</string>
     <string name="notification">알림</string>
     <string name="setting">설정</string>
+    <string name="ok">확인</string>
     <string name="logout">Log Out</string>
     <string name="friends">친구</string>
     <string name="login">로그인</string>
