--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="menu">메뉴</string>
     <string name="profile">프로필</string>
     <string name="notification">알림</string>
-    <string name="setting">설정</string>
+    <string name="setting">내 정보 설정</string>
     <string name="ok">확인</string>
     <string name="logout">Log Out</string>
     <string name="friends">친구</string>
@@ -27,4 +27,5 @@
     <string name="allowPush">푸시 알림</string>
     <string name="allowRequest">친구추가 허용</string>
     <string name="allowLocation">위치 공유</string>
+    <string name="seenAll">모두 읽음</string>
 </resources>
