--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="allowRequest">친구추가 허용</string>
     <string name="allowLocation">위치 공유</string>
     <string name="seenAll">모두 읽음</string>
+    <string name="friendRequest">친구 요청</string>
 </resources>
