--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,6 @@
     <string name="seenAll">모두 읽음</string>
     <string name="friendRequest">친구 요청</string>
     <string name="searchPlace">장소 검색</string>
+    <string name="destination">목적지</string>
+    <string name="chat">대화</string>
 </resources>
