--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="searchPlace">장소 검색</string>
     <string name="destination">목적지</string>
     <string name="chat">대화</string>
+    <string name="members">멤버</string>
 </resources>
